--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,4 +15,13 @@
     </style>
 
     <style name="Theme.ProyectoDAM1" parent="Base.Theme.ProyectoDAM1" />
+
+    <style name="Theme.ProyectoDAM1.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.ProyectoDAM1.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.ProyectoDAM1.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
