--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,16 +6,17 @@
     android:layout_height="match_parent"
     android:background="@drawable/fondo_login2"
     android:orientation="vertical"
-    android:padding="40dp"
     tools:context=".MainActivity"
     android:id="@+id/main">
-
 
     <TextView
         android:id="@+id/lbl_bienvenida"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Bienvenido al Sistema"
+        android:layout_marginTop="25dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="25dp"
@@ -32,7 +33,7 @@
         android:id="@+id/lbl_logueo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="30px"
+        android:layout_marginTop="15dp"
         android:text="Usuario Logueo"
         android:textAlignment="center"
         android:textColor="@color/white"
@@ -45,6 +46,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
         android:textColorHint="@color/white"
         app:boxStrokeColor="@color/black"
         app:boxStrokeWidth="1.5px"
@@ -65,6 +68,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
         android:textColorHint="@color/white"
         app:boxStrokeColor="@color/black"
         app:boxStrokeWidth="1.5px"
@@ -86,6 +91,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
         android:background="@drawable/stilo_btn_login"
         android:text="Ingresar"
         android:textColor="@color/white"
