--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,16 +5,20 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
+            android:id="@+id/nav_inicio"
+            android:icon="@drawable/ic_menu_home"
             android:title="@string/menu_home" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
+            android:id="@+id/nav_inventary"
+            android:icon="@drawable/ic_menu_inventario"
+            android:title="@string/menu_inventario" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:id="@+id/nav_venta"
+            android:icon="@drawable/ic_menu_ventas"
+            android:title="@string/menu_venta" />
+        <item
+            android:id="@+id/nav_report"
+            android:icon="@drawable/ic_menu_reporte"
+            android:title="@string/menu_reporte"/>
     </group>
 </menu>
