--- a/app/src/main/res/navigation/nav_principal.xml
+++ b/app/src/main/res/navigation/nav_principal.xml
@@ -2,24 +2,29 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    android:id="@+id/nav_principal"
+    app:startDestination="@+id/nav_inicio">
 
     <fragment
-        android:id="@+id/nav_home"
+        android:id="@+id/nav_inicio"
         android:name="com.example.proyectodam1.ui.main.principalMenu.ui.home.HomeFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.example.proyectodam1.ui.main.principalMenu.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        android:id="@+id/nav_inventary"
+        android:name="com.example.proyectodam1.ui.main.principalMenu.ui.inventario.InventarioFragment"
+        android:label="@string/menu_inventario"
+        tools:layout="@layout/fragment_inventario" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.example.proyectodam1.ui.main.principalMenu.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/nav_venta"
+        android:name="com.example.proyectodam1.ui.main.principalMenu.ui.venta.VentaFragment"
+        android:label="@string/menu_venta"
+        tools:layout="@layout/fragment_venta" />
+    <fragment
+        android:id="@+id/nav_report"
+        android:name="com.example.proyectodam1.ui.main.principalMenu.ui.reporte.ReporteFragment"
+        android:label="@string/menu_reporte"
+        tools:layout="@layout/fragment_reporte" />
 </navigation>
