--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,22 +1,153 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.principalMenu.ui.home.HomeFragment">
+    android:paddingTop="30dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    >
 
-    <TextView
-        android:id="@+id/text_home"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:orientation="vertical"
+        android:layout_margin="30px">
+
+        <!-- Logo de Tecnostore Peru  para que te guies-->
+        <ImageView
+            android:id="@+id/logo_tecnostore"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="60px"
+            android:src="@drawable/logo_tecnostore" />
+
+
+
+        <!-- Título para que te guies-->
+        <TextView
+            android:id="@+id/tv_principal_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Bienvenido a Tecnostore Peru"
+            android:textAlignment="center"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:textColor="@color/black" />
+
+        <!-- Descripción de la empresa para que te guies -->
+        <TextView
+            android:id="@+id/tv_principal_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Tecnostore Peru es tu tienda de tecnología de confianza. Ofrecemos una amplia gama de productos electrónicos, desde teléfonos inteligentes y computadoras hasta accesorios y equipos de red. Nuestro objetivo es proporcionar productos de alta calidad a precios competitivos, con un excelente servicio al cliente."
+            android:textSize="16sp"
+            android:textColor="@color/black"
+            android:justificationMode="inter_word" />
+
+
+        <!-- A qué se dedica Tecnostore Peru para que te guies-->
+        <TextView
+            android:id="@+id/tv_principal_services_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="¿A qué se dedica Tecnostore Peru?"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textColor="@color/black" />
+
+        <TextView
+            android:id="@+id/tv_principal_services"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:text="En Tecnostore Peru, nos dedicamos a:\n\n- Venta de teléfonos inteligentes de las mejores marcas.\n- Venta de laptops y computadoras de escritorio.\n- Venta de accesorios tecnológicos como cargadores, fundas, audífonos, y más.\n- Servicio de reparación y mantenimiento de dispositivos electrónicos.\n- Asesoría en tecnología para empresas y particulares.\n- Venta de equipos de red y soluciones de conectividad."
+            android:textSize="16sp"
+            android:textColor="@color/black"
+            android:justificationMode="inter_word" />
+
+        <!-- Información de contacto para que te guies -->
+        <TextView
+            android:id="@+id/tv_principal_contact"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Información de Contacto:"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textColor="@color/black" />
+
+        <TextView
+            android:id="@+id/tv_principal_address"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:text="Dirección: Av. Tecnológica 1234, Lima, Peru"
+            android:textSize="16sp"
+            android:textColor="@color/black" />
+
+        <TextView
+            android:id="@+id/tv_principal_phone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:text="Teléfono: +51 123 456 789"
+            android:textSize="16sp"
+            android:textColor="@color/black" />
+
+        <TextView
+            android:id="@+id/tv_principal_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:text="Email: info@tecnostoreperu.com"
+            android:textSize="16sp"
+            android:textColor="@color/black" />
+
+        <!-- Redes sociales para que te guies-->
+        <TextView
+            android:id="@+id/tv_principal_social"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Síguenos en nuestras redes sociales:"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textColor="@color/black" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:paddingBottom="40px">
+
+            <ImageView
+                android:id="@+id/iv_facebook"
+                android:layout_width="38dp"
+                android:layout_height="40dp"
+                android:layout_margin="8dp"
+                android:src="@drawable/ic_facebook" />
+
+            <ImageView
+                android:id="@+id/iv_twitter"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_twitter"
+                android:layout_margin="8dp" />
+
+            <ImageView
+                android:id="@+id/iv_instagram"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_instagram"
+                android:layout_margin="8dp"
+                />
+        </LinearLayout>
+
+    </LinearLayout>
+</ScrollView>
