--- a/app/src/main/res/layout/nav_header_principal_menu.xml
+++ b/app/src/main/res/layout/nav_header_principal_menu.xml
@@ -18,6 +18,7 @@
         android:layout_height="wrap_content"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:layout_gravity="center"
         app:srcCompat="@mipmap/ic_launcher_round" />
 
     <TextView
@@ -25,11 +26,14 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="@string/nav_header_title"
+        android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/nav_header_subtitle" />
+        android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:text="@string/nav_header_rol"
+        android:textAlignment="center" />
+
 </LinearLayout>
