--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,8 @@
     android:paddingTop="30dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    >
+    android:scrollbars="none"
+    android:fadeScrollbars="false">
 
     <LinearLayout
         android:layout_width="match_parent"
