--- a/app/src/main/res/layout/fragment_inventario.xml
+++ b/app/src/main/res/layout/fragment_inventario.xml
@@ -57,6 +57,7 @@
             android:layout_marginBottom="10dp" />
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnGesInventario"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/nav_icon_inventario"
