--- a/app/src/main/res/layout/fragment_usuario_gestion.xml
+++ b/app/src/main/res/layout/fragment_usuario_gestion.xml
@@ -66,6 +66,7 @@
             app:icon="@drawable/ic_users"
             app:iconGravity="textStart"
             app:iconPadding="8dp" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -118,88 +119,91 @@
             android:textColor="@color/black"
             android:layout_marginBottom="10dp" />
 
-        <!-- Menus -->
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Menus"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="5dp" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Esta sección organiza los menus y crea menus."
-            android:textAlignment="center"
-            android:textSize="14sp"
-            android:textColor="@color/black" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnMenus"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="6dp"
-            android:backgroundTint="#99ccff"
-            android:elevation="4dp"
-            android:text="@string/nav_icon_menus"
-            android:textColor="@android:color/white"
-            app:cornerRadius="12dp"
-            app:icon="@drawable/ic_menus"
-            app:iconGravity="textStart"
-            app:iconPadding="8dp" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:text="Función: Permite ver detalles sobre los proveedores, como su nombre, información de contacto, términos de pago, etc. Los usuarios pueden ver qué productos están asociados con cada proveedor y también pueden agregar, editar o eliminar proveedores."
-            android:textSize="14sp"
-            android:textColor="@color/black"
-            android:layout_marginBottom="10dp" />
-
-        <!-- Rol Enlaces -->
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Rol Enlaces"
-            android:textSize="18sp"
-            android:textAlignment="center"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="5dp" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Esta sección organiza los enlaces hacia los menus con roles."
-            android:textSize="14sp"
-            android:textAlignment="center"
-            android:textColor="@color/black" />
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/RolMenu"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="6dp"
-            android:backgroundTint="#ffcc00"
-            android:elevation="4dp"
-            android:text="@string/nav_icon_rolenlace"
-            android:textColor="@android:color/white"
-            app:cornerRadius="12dp"
-            app:icon="@drawable/ic_link"
-            app:iconGravity="textStart"
-            app:iconPadding="8dp" />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:text="Función: Permite ver detalles sobre los proveedores, como su nombre, información de contacto, términos de pago, etc. Los usuarios pueden ver qué productos están asociados con cada proveedor y también pueden agregar, editar o eliminar proveedores."
-            android:textSize="14sp"
-            android:textColor="@color/black"
-            android:layout_marginBottom="50dp" />
     </LinearLayout>
 </ScrollView>
+
+
+
+
+
+<!--
+<TextView
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:text="Menus"
+android:textSize="18sp"
+android:textStyle="bold"
+android:textAlignment="center"
+android:textColor="@color/black"
+android:layout_marginTop="20dp"
+android:layout_marginBottom="5dp" />
+
+<TextView
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:text="Esta sección organiza los menus y crea menus."
+android:textAlignment="center"
+android:textSize="14sp"
+android:textColor="@color/black" />
+
+<com.google.android.material.button.MaterialButton
+android:id="@+id/btnMenus"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:layout_marginBottom="6dp"
+android:backgroundTint="#99ccff"
+android:elevation="4dp"
+android:text="@string/nav_icon_menus"
+android:textColor="@android:color/white"
+app:cornerRadius="12dp"
+app:icon="@drawable/ic_menus"
+app:iconGravity="textStart"
+app:iconPadding="8dp" />
+
+<TextView
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:textAlignment="center"
+android:text="Función: Permite ver detalles sobre los proveedores, como su nombre, información de contacto, términos de pago, etc. Los usuarios pueden ver qué productos están asociados con cada proveedor y también pueden agregar, editar o eliminar proveedores."
+android:textSize="14sp"
+android:textColor="@color/black"
+android:layout_marginBottom="10dp" />
+<TextView
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:text="Rol Enlaces"
+android:textSize="18sp"
+android:textAlignment="center"
+android:textStyle="bold"
+android:textColor="@color/black"
+android:layout_marginTop="20dp"
+android:layout_marginBottom="5dp" />
+
+<TextView
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:text="Esta sección organiza los enlaces hacia los menus con roles."
+android:textSize="14sp"
+android:textAlignment="center"
+android:textColor="@color/black" />
+<com.google.android.material.button.MaterialButton
+android:id="@+id/RolMenu"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:layout_marginBottom="6dp"
+android:backgroundTint="#ffcc00"
+android:elevation="4dp"
+android:text="@string/nav_icon_rolenlace"
+android:textColor="@android:color/white"
+app:cornerRadius="12dp"
+app:icon="@drawable/ic_link"
+app:iconGravity="textStart"
+app:iconPadding="8dp" />
+<TextView
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:textAlignment="center"
+android:text="Función: Permite ver detalles sobre los proveedores, como su nombre, información de contacto, términos de pago, etc. Los usuarios pueden ver qué productos están asociados con cada proveedor y también pueden agregar, editar o eliminar proveedores."
+android:textSize="14sp"
+android:textColor="@color/black"
+android:layout_marginBottom="50dp" /> -->
