--- a/app/src/main/res/layout/fragment_gestion_inventario.xml
+++ b/app/src/main/res/layout/fragment_gestion_inventario.xml
@@ -82,7 +82,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Cliente"
+            android:text="Categoria"
             android:layout_marginTop="10sp"
             android:textAlignment="center"
             android:textSize="18sp"
