--- a/app/src/main/res/layout/item_cliente.xml
+++ b/app/src/main/res/layout/item_cliente.xml
@@ -5,9 +5,13 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="15sp"
-    app:cardMaxElevation="20sp"
-    app:cardElevation="20sp"
-    app:cardUseCompatPadding="true">
+    app:cardMaxElevation="4sp"
+    app:cardElevation="4sp"
+    app:cardUseCompatPadding="true"
+    android:layout_marginStart="15sp"
+    android:layout_marginEnd="15sp"
+    android:layout_marginTop="18sp"
+    android:layout_marginBottom="-20sp">
 
     <RelativeLayout
         android:id="@+id/rlcontainer"
@@ -22,7 +26,8 @@
             android:src="@drawable/ic_cliente"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="false" />
+            android:layout_alignParentBottom="false"
+            android:layout_alignParentEnd="false"/>
 
         <TextView
             android:id="@+id/lblNombreCliente"
@@ -51,9 +56,13 @@
             android:layout_width="70dp"
             android:layout_height="80dp"
             android:layout_alignParentEnd="true"
-            android:gravity="center">
+            android:gravity="center"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="false"
+            android:layout_alignParentStart="false">
 
             <ImageButton
+                android:id="@+id/btnEliminarCliente"
                 android:layout_width="70dp"
                 android:layout_height="80dp"
                 android:src="@drawable/ic_delete"
